--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/microservices": "^10.4.6",
     "@nestjs/platform-express": "^10.0.0",
+    "@prisma/client": "^5.21.1",
     "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.4",
+    "prisma": "^5.21.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
