Add user microservices

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,11 @@
-RABBITMQ_URL=amqp://admin:1234@localhost:5672
-# RABBITMQ_URL=amqp://admin:1234@some-rabbit:5672
+RABBITMQ_URL=amqp://admin:1234@some-rabbit:5672
 
 RABBITMQ_AUTH_QUEUE=baemin_auth_queue
+RABBITMQ_USER_QUEUE=baemin_user_queue
+RABBITMQ_FOOD_QUEUE=baemin_food_queue
+RABBITMQ_CART_QUEUE=baemin_cart_queue
+RABBITMQ_ORDER_QUEUE=baemin_order_queue
 
-POSTGRES_URL="postgresql://postgres:1234@localhost:5432/db_baemin"
-# POSTGRES_URL="postgresql://postgres:1234@my-postgres:5432/db_baemin"
+POSTGRES_URL="postgresql://postgres:1234@my-postgres:5432/db_baemin"
 
 JWT_SECRET=KhucThienPhuc
