--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     depends_on:
       - baemin-backend-auth-container
       - baemin-backend-user-container
+      - baemin-backend-food-container
     networks:
       - node_network
 
@@ -34,6 +35,17 @@ services:
       context: .
       dockerfile: ./apps/user/Dockerfile
     image: baemin-backend-user-img
+    env_file:
+      - .env.example
+    networks:
+      - node_network
+
+  baemin-backend-food-container:
+    container_name: baemin-backend-food-container
+    build:
+      context: .
+      dockerfile: ./apps/food/Dockerfile
+    image: baemin-backend-food-img
     env_file:
       - .env.example
     networks:
