--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,12 @@
     "noFallthroughCasesInSwitch": false,
     "strict": true,
     "paths": {
-      "@app/shared": ["libs/shared/src"],
-      "@app/shared/*": ["libs/shared/src/*"]
+      "@app/shared": [
+        "libs/shared/src"
+      ],
+      "@app/shared/*": [
+        "libs/shared/src/*"
+      ]
     }
   }
 }
