Setup order microservice

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       - baemin-backend-user-container
       - baemin-backend-food-container
       - baemin-backend-cart-container
+      - baemin-backend-order-container
     networks:
       - node_network
 
@@ -58,6 +59,17 @@ services:
       context: .
       dockerfile: ./apps/cart/Dockerfile
     image: baemin-backend-cart-img
+    env_file:
+      - .env.example
+    networks:
+      - node_network
+
+  baemin-backend-order-container:
+    container_name: baemin-backend-order-container
+    build:
+      context: .
+      dockerfile: ./apps/order/Dockerfile
+    image: baemin-backend-order-img
     env_file:
       - .env.example
     networks:
