--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       - baemin-backend-food-container
       - baemin-backend-cart-container
       - baemin-backend-order-container
+      - baemin-backend-voucher-container
     networks:
       - node_network
 
@@ -70,6 +71,17 @@ services:
       context: .
       dockerfile: ./apps/order/Dockerfile
     image: baemin-backend-order-img
+    env_file:
+      - .env.example
+    networks:
+      - node_network
+
+  baemin-backend-voucher-container:
+    container_name: baemin-backend-voucher-container
+    build:
+      context: .
+      dockerfile: ./apps/voucher/Dockerfile
+    image: baemin-backend-voucher-img
     env_file:
       - .env.example
     networks:
