Add redis module and implement redis cache on menu food, today food

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,8 @@ RABBITMQ_ORDER_QUEUE=baemin_order_queue
 POSTGRES_URL="postgresql://postgres:1234@my-postgres:5432/db_baemin"
 
 JWT_SECRET=KhucThienPhuc
+
+REDIS_HOST=some-redis
+REDIS_PORT=6379
+REDIS_PASS=1234
+REDIS_TTL=20 #second
