Add elastic search service to search food

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,7 @@ REDIS_HOST=some-redis
 REDIS_PORT=6379
 REDIS_PASS=1234
 REDIS_TTL=20 #second
+
+ELASTIC_NODE=https://elasticsearch:9200
+ELASTIC_USER=elastic
+ELASTIC_PASS=V_rpn_5_D*zkrzXrlCuD
