--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "test:e2e": "jest --config ./apps/gateway-api-8080/test/jest-e2e.json"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^8.15.1",
     "@nestjs/cache-manager": "^2.3.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/elasticsearch": "^10.0.2",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/microservices": "^10.4.6",
     "@nestjs/passport": "^10.0.3",
