add redis to docker compose

--- a/.env.example
+++ b/.env.example
@@ -10,9 +10,9 @@ POSTGRES_URL="postgresql://postgres:1234@my-postgres:5432/db_baemin"
 
 JWT_SECRET=KhucThienPhuc
 
-REDIS_HOST=some-redis
+REDIS_HOST=baemin-backend-redis
 REDIS_PORT=6379
-REDIS_PASS=1234
+REDIS_PASS=eYVX7EwVmmxKPCDmwMtyKVge8oLd2t81
 REDIS_TTL=20 #second
 
 ELASTIC_NODE=https://elasticsearch:9200
