--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     container_name: baemin-backend-gateway-container
     build:
       context: ./back_end
-      dockerfile: ./back_end/apps/gateway-api-8080/Dockerfile
+      dockerfile: ./apps/gateway-api-8080/Dockerfile
     image: baemin-backend-gateway-img
     ports:
       - 8080:8080
@@ -34,7 +34,7 @@ services:
     container_name: baemin-backend-auth-container
     build:
       context: ./back_end
-      dockerfile: ./back_end/apps/auth/Dockerfile
+      dockerfile: ./apps/auth/Dockerfile
     image: baemin-backend-auth-img
     env_file:
       - ./back_end/.env.example
@@ -45,7 +45,7 @@ services:
     container_name: baemin-backend-user-container
     build:
       context: ./back_end
-      dockerfile: ./back_end/apps/user/Dockerfile
+      dockerfile: ./apps/user/Dockerfile
     image: baemin-backend-user-img
     env_file:
       - ./back_end/.env.example
@@ -56,7 +56,7 @@ services:
     container_name: baemin-backend-food-container
     build:
       context: ./back_end
-      dockerfile: ./back_end/apps/food/Dockerfile
+      dockerfile: ./apps/food/Dockerfile
     image: baemin-backend-food-img
     env_file:
       - ./back_end/.env.example
@@ -69,7 +69,7 @@ services:
     container_name: baemin-backend-cart-container
     build:
       context: ./back_end
-      dockerfile: ./back_end/apps/cart/Dockerfile
+      dockerfile: ./apps/cart/Dockerfile
     image: baemin-backend-cart-img
     env_file:
       - ./back_end/.env.example
@@ -80,7 +80,7 @@ services:
     container_name: baemin-backend-order-container
     build:
       context: ./back_end
-      dockerfile: ./back_end/apps/order/Dockerfile
+      dockerfile: ./apps/order/Dockerfile
     image: baemin-backend-order-img
     env_file:
       - ./back_end/.env.example
@@ -91,7 +91,7 @@ services:
     container_name: baemin-backend-voucher-container
     build:
       context: ./back_end
-      dockerfile: ./back_end/apps/voucher/Dockerfile
+      dockerfile: ./apps/voucher/Dockerfile
     image: baemin-backend-voucher-img
     env_file:
       - ./back_end/.env.example
